--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1120,4 +1120,8 @@
     <string name="template_name">Template Name</string>
     <string name="select_template_preview">This image will be used to preview this filter template</string>
     <string name="template_filter">Template Filter</string>
+    <string name="as_qr_code">As QR Code Image</string>
+    <string name="as_file">As File</string>
+    <string name="save_as_file">Save As File</string>
+    <string name="save_as_qr_code_image">Save As QR Code Image</string>
 </resources>
