--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1128,4 +1128,8 @@
     <string name="delete_template_warn">You are about to delete selected template filter. This operation cannot be undone</string>
     <string name="added_filter_template">Added filter template with name \"%1$s\" (%2$d)</string>
     <string name="filter_preview">Filter Preview</string>
+    <string name="qr_code">QR Code</string>
+    <string name="qr_code_sub">Scan QR code and get it\'s content or paste your string to generate new one</string>
+    <string name="code_content">Code Content</string>
+    <string name="scan_qr_code_to_replace_content">Scan QR Code to replace content in field, or type something to generate new QR Code</string>
 </resources>
