--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1132,4 +1132,5 @@
     <string name="qr_code_sub">Scan QR code and get it\'s content or paste your string to generate new one</string>
     <string name="code_content">Code Content</string>
     <string name="scan_qr_code_to_replace_content">Scan QR Code to replace content in field, or type something to generate new QR Code</string>
+    <string name="qr_description">QR Description</string>
 </resources>
