--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1134,4 +1134,5 @@
     <string name="scan_qr_code_to_replace_content">Scan QR Code to replace content in field, or type something to generate new QR Code</string>
     <string name="qr_description">QR Description</string>
     <string name="min">Min</string>
+    <string name="grant_camera_permission_to_scan_qr_code">Grant camera permission in settings to scan QR code</string>
 </resources>
