Added new scale modes

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1135,4 +1135,54 @@
     <string name="qr_description">QR Description</string>
     <string name="min">Min</string>
     <string name="grant_camera_permission_to_scan_qr_code">Grant camera permission in settings to scan QR code</string>
+    <string name="cubic">Cubic</string>
+    <string name="bspline">B-Spline</string>
+    <string name="hamming">Hamming</string>
+    <string name="hanning">Hanning</string>
+    <string name="blackman">Blackman</string>
+    <string name="welch">Welch</string>
+    <string name="quadric">Quadric</string>
+    <string name="gaussian">Gaussian</string>
+    <string name="sphinx">Sphinx</string>
+    <string name="bartlett">Bartlett</string>
+    <string name="robidoux">Robidoux</string>
+    <string name="robidoux_sharp">Robidoux Sharp</string>
+    <string name="spline16">Spline 16</string>
+    <string name="spline36">Spline 36</string>
+    <string name="spline64">Spline 64</string>
+    <string name="kaiser">Kaiser</string>
+    <string name="bartlett_hann">Bartlett-Hann</string>
+    <string name="box">Box</string>
+    <string name="bohman">Bohman</string>
+    <string name="lanczos2">Lanczos 2</string>
+    <string name="lanczos3">Lanczos 3</string>
+    <string name="lanczos4">Lanczos 4</string>
+    <string name="lanczos2_jinc">Lanczos 2 Jinc</string>
+    <string name="lanczos3_jinc">Lanczos 3 Jinc</string>
+    <string name="lanczos4_jinc">Lanczos 4 Jinc</string>
+    <string name="cubic_sub">Cubic interpolation provides smoother scaling by considering the closest 16 pixels, giving better results than bilinear</string>
+    <string name="bspline_sub">Utilizes piecewise-defined polynomial functions to smoothly interpolate and approximate a curve or surface, flexible and continuous shape representation</string>
+    <string name="hamming_sub">A window function used to reduce spectral leakage by tapering the edges of a signal, useful in signal processing</string>
+    <string name="hanning_sub">A variant of the Hann window, commonly used to reduce spectral leakage in signal processing applications</string>
+    <string name="blackman_sub">A window function that provides good frequency resolution by minimizing spectral leakage, often used in signal processing</string>
+    <string name="welch_sub">A window function designed to give good frequency resolution with reduced spectral leakage, often used in signal processing applications</string>
+    <string name="quadric_sub">A method that uses a quadratic function for interpolation, providing smooth and continuous results</string>
+    <string name="gaussian_sub">An interpolation method that applies a Gaussian function, useful for smoothing and reducing noise in images</string>
+    <string name="sphinx_sub">An advanced resampling method providing high-quality interpolation with minimal artifacts</string>
+    <string name="bartlett_sub">A triangular window function used in signal processing to reduce spectral leakage</string>
+    <string name="robidoux_sub">A high-quality interpolation method optimized for natural image resizing, balancing sharpness and smoothness</string>
+    <string name="robidoux_sharp_sub">A sharper variant of the Robidoux method, optimized for crisp image resizing</string>
+    <string name="spline16_sub">A spline-based interpolation method that provides smooth results using a 16-tap filter</string>
+    <string name="spline36_sub">A spline-based interpolation method that provides smooth results using a 36-tap filter</string>
+    <string name="spline64_sub">A spline-based interpolation method that provides smooth results using a 64-tap filter</string>
+    <string name="kaiser_sub">An interpolation method that uses the Kaiser window, providing good control over the trade-off between main-lobe width and side-lobe level</string>
+    <string name="bartlett_hann_sub">A hybrid window function combining the Bartlett and Hann windows, used to reduce spectral leakage in signal processing</string>
+    <string name="box_sub">A simple resampling method that uses the average of the nearest pixel values, often resulting in a blocky appearance</string>
+    <string name="bohman_sub">A window function used to reduce spectral leakage, providing good frequency resolution in signal processing applications</string>
+    <string name="lanczos2_sub">A resampling method that uses a 2-lobe Lanczos filter for high-quality interpolation with minimal artifacts</string>
+    <string name="lanczos3_sub">A resampling method that uses a 3-lobe Lanczos filter for high-quality interpolation with minimal artifacts</string>
+    <string name="lanczos4_sub">A resampling method that uses a 4-lobe Lanczos filter for high-quality interpolation with minimal artifacts</string>
+    <string name="lanczos2_jinc_sub">A variant of the Lanczos 2 filter that uses the jinc function, providing high-quality interpolation with minimal artifacts</string>
+    <string name="lanczos3_jinc_sub">A variant of the Lanczos 3 filter that uses the jinc function, providing high-quality interpolation with minimal artifacts</string>
+    <string name="lanczos4_jinc_sub">A variant of the Lanczos 4 filter that uses the jinc function, providing high-quality interpolation with minimal artifacts</string>
 </resources>
