--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1079,4 +1079,91 @@
     <string name="allow_enter_by_text_field">Разрешить ввод по текстовому полю</string>
     <string name="scale_color_space">Цветовое пространство увеличения</string>
     <string name="linear">Линейное</string>
+    <string name="equalize_histogram_pixelation">Выравнивание гистограммы пикселизации</string>
+    <string name="grid_size_x">Размер сетки X</string>
+    <string name="grid_size_y">Размер сетки Y</string>
+    <string name="equalize_histogram_adaptive">Адаптивное выравнивание гистограммы</string>
+    <string name="equalize_histogram_adaptive_luv">Адаптивное выравнивание гистограммы LUV</string>
+    <string name="equalize_histogram_adaptive_lab">Адаптивное выравнивание гистограммы LAB</string>
+    <string name="clahe">КЛАЭ</string>
+    <string name="clahe_lab">КЛАЭ LAB</string>
+    <string name="clahe_luv">КЛАЭ LUV</string>
+    <string name="crop_to_content">Обрезать по содержимому</string>
+    <string name="frame_color">Цвет рамки</string>
+    <string name="color_to_ignore">Цвет для игнорирования</string>
+    <string name="template">Шаблон</string>
+    <string name="no_template_filters">Нет добавленных фильтров шаблона</string>
+    <string name="create_new">Создать новый</string>
+    <string name="scanned_qr_code_isnt_filter_template">Сканированный QR-код не является допустимым шаблоном фильтра</string>
+    <string name="scan_qr_code">Сканировать QR-код</string>
+    <string name="opened_file_have_no_filter_template">Выбранный файл не содержит данных шаблона фильтра</string>
+    <string name="create_template">Создать шаблон</string>
+    <string name="template_name">Имя шаблона</string>
+    <string name="select_template_preview">Это изображение будет использоваться для предварительного просмотра этого шаблона фильтра</string>
+    <string name="template_filter">Фильтр шаблона</string>
+    <string name="as_qr_code">Как изображение QR-кода</string>
+    <string name="as_file">Как файл</string>
+    <string name="save_as_file">Сохранить как файл</string>
+    <string name="save_as_qr_code_image">Сохранить как изображение QR-кода</string>
+    <string name="delete_template">Удалить шаблон</string>
+    <string name="delete_template_warn">Вы собираетесь удалить выбранный фильтр шаблона. Эта операция не может быть отменена</string>
+    <string name="added_filter_template">Добавлен фильтр шаблона с именем \"%1$s\" (%2$d)</string>
+    <string name="filter_preview">Предварительный просмотр фильтра</string>
+    <string name="qr_code">QR-код</string>
+    <string name="qr_code_sub">Сканируйте QR-код, чтобы получить его содержимое, или вставьте свою строку для генерации нового кода</string>
+    <string name="code_content">Содержимое кода</string>
+    <string name="scan_qr_code_to_replace_content">Сканируйте QR-код, чтобы заменить содержимое в поле, или введите что-нибудь для генерации нового QR-кода</string>
+    <string name="qr_description">Описание QR</string>
+    <string name="min">Мин</string>
+    <string name="grant_camera_permission_to_scan_qr_code">Разрешите доступ к камере в настройках для сканирования QR-кода</string>
+    <string name="cubic">Кубический</string>
+    <string name="bspline">Би Сплайн</string>
+    <string name="hamming">Хэмминг</string>
+    <string name="hanning">Хэннинг</string>
+    <string name="blackman">Блэкман</string>
+    <string name="welch">Уэлч</string>
+    <string name="quadric">Квадратический</string>
+    <string name="gaussian">Гауссовский</string>
+    <string name="sphinx">Сфинкс</string>
+    <string name="bartlett">Бартлетт</string>
+    <string name="robidoux">Робиду</string>
+    <string name="robidoux_sharp">Робиду Шарп</string>
+    <string name="spline16">Сплайн 16</string>
+    <string name="spline36">Сплайн 36</string>
+    <string name="spline64">Сплайн 64</string>
+    <string name="kaiser">Кайзер</string>
+    <string name="bartlett_hann">Бартлетт-Ханн</string>
+    <string name="box">Блочный</string>
+    <string name="bohman">Боман</string>
+    <string name="lanczos2">Ланцош 2</string>
+    <string name="lanczos3">Ланцош 3</string>
+    <string name="lanczos4">Ланцош 4</string>
+    <string name="lanczos2_jinc">Ланцош 2 Jinc</string>
+    <string name="lanczos3_jinc">Ланцош 3 Jinc</string>
+    <string name="lanczos4_jinc">Ланцош 4 Jinc</string>
+    <string name="cubic_sub">Кубическая интерполяция обеспечивает более гладкое масштабирование, учитывая ближайшие 16 пикселей, давая лучшие результаты, чем билинейная</string>
+    <string name="bspline_sub">Использует кусочно-определенные полиномиальные функции для плавной интерполяции и аппроксимации кривой или поверхности, гибкое и непрерывное представление формы</string>
+    <string name="hamming_sub">Оконная функция, используемая для уменьшения спектральных утечек путем сужения краев сигнала, полезна в обработке сигналов</string>
+    <string name="hanning_sub">Вариант окна Ханна, обычно используемый для уменьшения спектральных утечек в приложениях обработки сигналов</string>
+    <string name="blackman_sub">Оконная функция, обеспечивающая хорошее частотное разрешение за счет минимизации спектральных утечек, часто используемая в обработке сигналов</string>
+    <string name="welch_sub">Оконная функция, разработанная для обеспечения хорошего частотного разрешения с уменьшенными спектральными утечками, часто используемая в приложениях обработки сигналов</string>
+    <string name="quadric_sub">Метод, использующий квадратическую функцию для интерполяции, обеспечивая плавные и непрерывные результаты</string>
+    <string name="gaussian_sub">Метод интерполяции, применяющий гауссовскую функцию, полезный для сглаживания и уменьшения шума в изображениях</string>
+    <string name="sphinx_sub">Продвинутый метод пересэмплирования, обеспечивающий высококачественную интерполяцию с минимальными артефактами</string>
+    <string name="bartlett_sub">Треугольная оконная функция, используемая в обработке сигналов для уменьшения спектральных утечек</string>
+    <string name="robidoux_sub">Высококачественный метод интерполяции, оптимизированный для изменения размера естественных изображений, балансирующий резкость и гладкость</string>
+    <string name="robidoux_sharp_sub">Более резкий вариант метода Робиду, оптимизированный для четкого изменения размера изображений</string>
+    <string name="spline16_sub">Метод интерполяции на основе сплайнов, обеспечивающий плавные результаты с использованием 16-кратного фильтра</string>
+    <string name="spline36_sub">Метод интерполяции на основе сплайнов, обеспечивающий плавные результаты с использованием 36-кратного фильтра</string>
+    <string name="spline64_sub">Метод интерполяции на основе сплайнов, обеспечивающий плавные результаты с использованием 64-кратного фильтра</string>
+    <string name="kaiser_sub">Метод интерполяции, использующий окно Кайзера, обеспечивающий хороший контроль над компромиссом между шириной главного лепестка и уровнем бокового лепестка</string>
+    <string name="bartlett_hann_sub">Гибридная оконная функция, объединяющая окна Бартлетта и Ханна, используемая для уменьшения спектральных утечек в обработке сигналов</string>
+    <string name="box_sub">Простой метод пересэмплирования, использующий среднее значение ближайших значений пикселей, часто приводящий к блочному виду</string>
+    <string name="bohman_sub">Оконная функция, используемая для уменьшения спектральных утечек, обеспечивающая хорошее частотное разрешение в приложениях обработки сигналов</string>
+    <string name="lanczos2_sub">Метод пересэмплирования, использующий 2-лепестковый фильтр Ланцоша для высококачественной интерполяции с минимальными артефактами</string>
+    <string name="lanczos3_sub">Метод пересэмплирования, использующий 3-лепестковый фильтр Ланцоша для высококачественной интерполяции с минимальными артефактами</string>
+    <string name="lanczos4_sub">Метод пересэмплирования, использующий 4-лепестковый фильтр Ланцоша для высококачественной интерполяции с минимальными артефактами</string>
+    <string name="lanczos2_jinc_sub">Вариант фильтра Ланцош 2, использующий функцию джинка, обеспечивающий высококачественную интерполяцию с минимальными артефактами</string>
+    <string name="lanczos3_jinc_sub">Вариант фильтра Ланцош 3, использующий функцию джинка, обеспечивающий высококачественную интерполяцию с минимальными артефактами</string>
+    <string name="lanczos4_jinc_sub">Вариант фильтра Ланцош 4, использующий функцию джинка, обеспечивающий высококачественную интерполяцию с минимальными артефактами</string>
 </resources>
