--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1179,4 +1179,16 @@
     <string name="ewa_robidoux_sharp_sub">Вариант фильтра Робиду Шарп с эллиптическим взвешенным средним (EWA) для более четких результатов</string>
     <string name="ewa_lanczos3_jinc">Ланцош 3 Jinc EWA</string>
     <string name="ewa_lanczos3_jinc_sub">Вариант фильтра Ланцош 3 Jinc с эллиптическим взвешенным средним (EWA) для высококачественного ресемплинга с уменьшением алиасинга</string>
+    <string name="ginseng">Женьшень</string>
+    <string name="ginseng_sub">Фильтр ресемплинга, разработанный для высококачественной обработки изображений с хорошим балансом резкости и плавности</string>
+    <string name="ewa_ginseng">Женьшень EWA</string>
+    <string name="ewa_ginseng_sub">Вариант фильтра Женьшень с эллиптическим взвешенным средним (EWA) для улучшенного качества изображения</string>
+    <string name="ewa_lanczos_sharp">Ланцош Шарп EWA</string>
+    <string name="ewa_lanczos_sharp_sub">Вариант фильтра Ланцош Шарп с эллиптическим взвешенным средним (EWA) для достижения резких результатов с минимальными артефактами</string>
+    <string name="ewa_lanczos_4_sharpest">Ланцош 4 Самый Резкий EWA</string>
+    <string name="ewa_lanczos_4_sharpest_sub">Вариант фильтра Ланцош 4 Самый Резкий с эллиптическим взвешенным средним (EWA) для крайне резкого ресемплинга изображений</string>
+    <string name="ewa_lanczos_soft">Ланцош Мягкий EWA</string>
+    <string name="ewa_lanczos_soft_sub">Вариант фильтра Ланцош Мягкий с эллиптическим взвешенным средним (EWA) для более плавного ресемплинга изображений</string>
+    <string name="haasn_soft">Хаасн Мягкий</string>
+    <string name="haasn_soft_sub">Фильтр ресемплинга, разработанный Хаасн для плавного масштабирования изображений без артефактов</string>
 </resources>
