Start adding image stacker

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1212,4 +1212,6 @@
     <string name="format_conversion">Format Conversion</string>
     <string name="format_conversion_sub">Convert batch of images from one format to another</string>
     <string name="dismiss_forever">Dismiss Forever</string>
+    <string name="image_stacking">Image Stacking</string>
+    <string name="image_stacking_sub">Stack images on top of each other with choosen blend modes</string>
 </resources>
