--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1215,4 +1215,5 @@
     <string name="image_stacking">Image Stacking</string>
     <string name="image_stacking_sub">Stack images on top of each other with choosen blend modes</string>
     <string name="add_image">Add Image</string>
+    <string name="bins_count">Bins count</string>
 </resources>
